Add debugging for dark mode class application issue
DEBUGGING ADDED:
- Added setTimeout check to see if dark class persists after adding
- Added multiple methods to apply dark class (classList + setAttribute)
- Added HTML element inspection to see actual DOM state
- This will help identify if something is removing the dark class

The issue seems to be that the dark class is being added but then removed immediately.
This debugging will show us what's happening to the class after it's applied.

--- a/advisor/templates/advisor/mobile_index.html
+++ b/advisor/templates/advisor/mobile_index.html
@@ -361,12 +361,20 @@ if (themeToggleMobile) {
             if (lightIconMobile) lightIconMobile.classList.add('hidden');
             console.log('Switched to light mode');
         } else {
-            // Currently light, switching to dark
+            // Currently light, switching to dark - try multiple methods
             document.documentElement.classList.add('dark');
+            document.documentElement.setAttribute('class', document.documentElement.getAttribute('class') + ' dark');
             localStorage.setItem('color-theme', 'dark');
             if (darkIconMobile) darkIconMobile.classList.add('hidden');
             if (lightIconMobile) lightIconMobile.classList.remove('hidden');
             console.log('Switched to dark mode');
+            
+            // Debug: Check if class was actually added
+            setTimeout(() => {
+                console.log('After adding dark class, has dark:', document.documentElement.classList.contains('dark'));
+                console.log('All classes:', document.documentElement.className);
+                console.log('HTML element:', document.documentElement.outerHTML.substring(0, 100));
+            }, 10);
         }
         
         // Force browser to recalculate styles immediately
